--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Ledg...</title>
+    <title>Live | Ledg...</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./index_files/bootstrap.min.css" rel="stylesheet">
